First draft of integrating with the unprivileged ISA manual
This is still a very early draft. For now this pulls part of the Quickstart
chapter into a new RV{32,64}CH chapter and moves the capability description
as well as the instruction listing to new CHERI appendices.

--- a/src/cheri/app-cheri-instructions.adoc
+++ b/src/cheri/app-cheri-instructions.adoc
@@ -1,5 +1,6 @@
-[#riscv-extensions]
-== RISC-V Instructions and Extensions Reference
+[appendix]
+[#app-cheri-instructions]
+== RISC-V Instructions with different behavior for {cheri_base_ext_name}
 
 These instruction pages are for the new CHERI instructions, and some existing RISC-V
 instructions where the effect of CHERI needs specific details.
