--- a/src/cheri/app-cap-description.adoc
+++ b/src/cheri/app-cap-description.adoc
@@ -1,3 +1,4 @@
+[appendix]
 [#section_cap_description]
 == Anatomy of Capabilities in {cheri_base_ext_name}
 
@@ -520,7 +521,7 @@ while still allowing the bounds to be correctly decoded.
 
 [#cap_bounds_map]
 .Memory address bounds encoded within a capability
-image::cap-bounds-map.png[width=80%,align=center]
+image::../cheri/img/cap-bounds-map.png[width=80%,align=center]
 
 A capability has _infinite_ bounds if its bounds cover the entire address space
 such that the base address _b_=0 and the top address _t_&#8805;2^MXLEN^,
