--- a/src/cheri/riscv-cheri.adoc
+++ b/src/cheri/riscv-cheri.adoc
@@ -38,7 +38,7 @@ include::summary.adoc[]
 
 include::introduction.adoc[]
 
-include::cap-description.adoc[]
+include::app-cap-description.adoc[]
 
 include::riscv-integration.adoc[]
 
@@ -60,7 +60,7 @@ include::ptrmask-integration.adoc[]
 
 include::tid-ext.adoc[]
 
-include::instructions.adoc[]
+include::app-cheri-instructions.adoc[]
 
 include::system.adoc[]
 
