--- a/src/rv32-64-cheri.adoc
+++ b/src/rv32-64-cheri.adoc
@@ -4,7 +4,7 @@ This chapter describes the RV32CH and RV64CH base capability
 instruction sets, that extend the RV32I and RV64I integer instruction
 sets with capability-based addressing.
 
-=== Capability registers
+=== CHERI capabilities
 
 {cheri_base_ext_name} introduces a new data type, the _capability_, generally used for architectural pointers.
 Capability registers extend existing XLEN-bit integer registers to `2*XLEN+1` (hereafter referred to as CLEN) bit structures, containing all the information required to identify and authorize access to a region of memory.
@@ -46,44 +46,45 @@ The exact bitwise layout of capabilities as well as the precise encoding of each
 
 The following state is added by {cheri_base_ext_name}:
 
-* Metadata within architectural registers: XLEN-wide <<gprs,general purpose integer registers>> (e.g. `sp`, `a0`) are all extended with another XLEN bits of capability metadata and a validity bit.
-Such extended registers are refered to as the existing name prefixed with a `c`, i.e. `csp`, `ca0`.
-For numbered register names the `x` prefix is replaced with a `c` instead: i.e. the extended version of `x0` becomes `c0`
+* Metadata within architectural registers: XLEN-wide <<gprs,general purpose integer registers>> (e.g. `sp`, `a0`) are all extended with another XLEN bits of capability metadata plus a validity bit.
+When referring to the extended register, the `x` prefix is replaced with a `c`: i.e. the capability extended version of `x0` becomes `c0`.
 The existing integer register names refer to the address part of the capability.
+For the ABI register names the a `c` prefix is added, i.e. `csp`, `ca0`.
 The zero register is extended with zero metadata and a cleared tag: this is called the <<null-cap>> capability.
 As well as general purpose registers, system registers that store addresses are extended to contain capabilities.
-For example, the program counter `pc` is extended to the program counter capability (<<pcc>>) that can restrict the range of branches and jumps for currently executing code.
-Additionally, CSRs that hold pointers are extended to capability, but since no CSRs are defined in the RV32I/RV64I base instruction set, the individual chapters that define new CSRs state the ones that are extended to CLEN bits.
+In the base {cheri_base_ext_name}, the only such register is the program counter `pc` that is extended to the program counter capability (<<pcc>>). Extending `pc` ensures that the range of branches and jumps for currently executing code can be restricted.
+Additionally, CSRs that hold pointers are extended to capability, but since no CSRs are defined in the RV32I/RV64I base instruction set, the individual chapters that define new CSRs state whether they are extended to CLEN bits.
+
+.CHERI Capability registers extending existing integer registers in {cheri_base_ext_name}
+[#base_cap_registers]
+[bytefield]
+----
+(defattrs :plain [:plain {:font-family "M+ 1p Fallback" :font-size 25}])
+(def row-height 40)
+(def row-header-fn nil)
+(def boxes-per-row 20)
+(draw-column-headers {:height 30 :font-size 18 :labels (concat ["" "2*XLEN (CLEN-1)"] (vec (repeat 8 "")) ["XLEN"] (vec (repeat 8 "")) ["0"])})
+
+(draw-box "c0" [:box-first {:span 10}]) (draw-box "x0" [:box-last {:span 10 }])
+(draw-box "c1" [:box-first {:span 10}]) (draw-box "x1" [:box-last {:span 10 }])
+(draw-gap "c2-c30 (extending x2-x30)")
+(draw-box "c31" [:box-first {:span 10}]) (draw-box "x31" [:box-last {:span 10 }])
+(draw-box "pcc" [:box-first {:span 10}]) (draw-box "pc" [:box-last {:span 10 }])
+----
 
 * Tags in registers, caches, and memory:
 
 ** Every register has a one-bit tag, indicating whether the capability in the register is valid to be dereferenced.
-Among other reasons, this tag is cleared if the register is written as an integer.
+ This tag is cleared whenever an invalid capability operation is performed. Such invalid operations include e.g. writing only the integer portion of the register or attempting to increase bounds or permissions.
 
 ** The tags are also tracked through the memory subsystem: every aligned CLEN-bits wide region has a non-addressable one-bit tag, which the hardware manages atomically with the data.
-The tag is cleared if the memory region is ever written other than using a capability store from a tagged capability register.
+The tag is cleared if the memory region is ever written using an operation other than a store of a full capability register.
 Any caches must preserve this abstraction.
-
-=== Checking Memory
-
-Every memory access performed by a CHERI core must be authorized by a capability.
-// TODO: update this for the new structure
-// In _purecap_ code, where all pointers are individual capabilities, the capability and address are used together, so e.g. `lw t0, 16(csp)` loads a word from memory, getting the address and bounds from the `csp` register.
-// For code that has not yet been fully adapted to CHERI (_hybrid_ code), the processor can run in a pointer mode (not to be confused with a privilege mode) where the authorizing capability is instead taken from a special CSR: the default data capability (<<ddc>>).
-
-Instruction fetch is also authorized by a capability: the program counter capability (<<pcc>>) which extends PC.
-This allows code fetch to be bounded, preventing a wide range of attacks that subvert control flow with integer data.
-// TODO: move this to the appropriate chapter
-// Where {cheri_default_ext_name} is supported, the <<pcc>> also contains the <<m_bit,mode bit>> indicating whether the processor is running in integer or capability pointer mode.
-// Changing the bounds used for instruction fetch or the pointer mode can be as easy as performing a capability-based jump (<<JALR>> in capability pointer mode).
-// <<MODESW_CAP>> and <<MODESW_INT>> instructions are also added to allow cheap mode switching.
-
-Exception codes are added for CHERI-specific exceptions on fetch, jumps, and memory access.
-No other exception paths are added: in particular, capability manipulations do not trap, but may clear the tag on the result capability if the operation is not permitted.
 
 === Added Instructions
 
-The added instructions can be split into the following categories:
+{cheri_base_ext_name} adds new instructions to interact with the extended registers.
+These added instructions can be split into the following categories:
 
 * Capability manipulations (e.g. <<CADD>>, <<SCBNDS>>): for security, capabilities can only be modified in restricted ways.
 Special instructions are provided to perform these allowed operations, for example _shrinking_ the bounds or _reducing_ the permissions.
@@ -100,10 +101,18 @@ Instructions are added to perform these wider accesses, allowing capability flow
 === Existing Instructions
 
 Existing RISC-V instructions are largely unmodified.
-// TODO: move hybrid to appropriate section
-// in {cheri_int_mode_name}, there is binary compatibility.
-// Instructions that access memory, as well as branches and jumps, are automatically checked against <<ddc>> and <<pcc>>, raising an exception if the checks fail.
-// However, <<ddc>> and <<pcc>> are reset to <<infinite-cap>> capabilities, meaning the checks will always pass on systems that have not written to CHERI system registers.
 However, instructions that access memory, as well as branches and jumps are modified to check against the full capability from the address register (e.g. `lw t0, 16(csp)`).
 In some cases, they are also changed to return a full capability value, e.g. <<AUIPC>> will return the full <<pcc>> including the metadata.
 For the full list of instructions that change behavior with {cheri_base_ext_name}, see <<app_cheri_modified_instrs>>.
+
+=== Capability checks
+
+Every memory access performed by a CHERI core must be authorized by a capability.
+The authorizing capability is either named explicitly (the base register of a load/store operation) or implicitly (when executing a branch, <<pcc>> is used for authorization).
+For example, `lw t0, 16(csp)` loads a word from memory, getting the address, bounds, and permissions from the `csp` register.
+
+Instruction fetch is also authorized by a capability: the program counter capability (<<pcc>>) which extends PC.
+This allows code fetch to be bounded, preventing a wide range of attacks that subvert control flow with integer data.
+
+With {cheri_base_ext_name} instruction fetches, jumps, and memory accesses may result in a fatal trap if the authorizing capability does grant the required permissions or the access is out of bounds.
+No other exception paths are added: in particular, capability manipulations do not trap, but may clear the tag on the result capability if the operation is not permitted.
