--- a/src/rv32-64-cheri.adoc
+++ b/src/rv32-64-cheri.adoc
@@ -1,13 +1,18 @@
 [[rv32ch]]
 == RV32CH and RV64CH Base Capability Instruction Sets, Version 1.0
 This chapter describes the RV32CH and RV64CH base capability
-instruction sets, that extend the RV32I and RV64I integer instruction
-sets with capability-based addressing.
+instruction sets, that extend the RV32I and RV64I integer instruction sets with CHERI.
 
-=== CHERI capabilities
+CHERI enhances the base ISA to add hardware memory access control.
+It has an additional memory access mechanism that protects _references to code and data_ (pointers), rather than the _location of code and data_ (integer addresses).
+This mechanism is implemented by providing a new primitive, called a *capability*, that software components can use to implement strongly protected pointers within an address space.
+
+=== CHERI overview
 
 {cheri_base_ext_name} introduces a new data type, the _capability_, generally used for architectural pointers.
-Capability registers extend existing XLEN-bit integer registers to `2*XLEN+1` (hereafter referred to as CLEN) bit structures, containing all the information required to identify and authorize access to a region of memory.
+Capabilities are unforgeable and delegatable tokens of authority that grant software the ability to perform a specific set of operations.
+In CHERI, integer-based pointers can be replaced by capabilities to provide memory access control.
+Capability registers extend existing XLEN-bit integer registers to `2*XLEN+1` (hereafter referred to as CLEN) bit structures, adding metadata to protect its integrity, limit how it is manipulated, and control its use.
 
 .CHERI Capability structure
 [#cap_structure]
@@ -42,16 +47,51 @@ CHERI capabilities consist of:
 
 The exact bitwise layout of capabilities as well as the precise encoding of each field for XLEN=32 and XLEN=64 is described in <<section_cap_description>>.
 
-=== Added State
+The CHERI model is motivated by the _principle of least privilege_, which
+argues that greater security can be obtained by minimizing the privileges
+accessible to running software. A second guiding principle is the _principle of
+intentional use_, which argues that, where many privileges are available to a
+piece of software, the privilege to use should be explicitly named rather than
+implicitly selected. While CHERI does not prevent the expression of vulnerable
+software designs, it provides strong vulnerability mitigation: attackers have a
+more limited vocabulary for attacks, and should a vulnerability be successfully
+exploited, they gain fewer rights, and have reduced access to further attack
+surfaces.
+
+Protection properties for capabilities include the ISA ensuring that
+capabilities are always derived via valid manipulations of other capabilities
+(_provenance_), that corrupted in-memory capabilities cannot be dereferenced
+(_integrity_), and that rights associated with capabilities shall only ever be
+equal or less permissive (_monotonicity_). Tampering or modifying capabilities
+in an attempt to elevate their rights will yield an invalid capability as the
+tag will be cleared. Attempting to dereference via an invalid capability
+will result in a hardware exception.
+
+CHERI capabilities may be held in registers or in memories, and are loaded,
+stored, and dereferenced using CHERI-aware instructions that expect capability
+operands rather than integer addresses. On hardware reset, initial capabilities
+are made available to software via capability
+registers. All other capabilities will be derived from these initial valid
+capabilities through valid capability transformations.
+
+Developers can use CHERI to build fine-grained spatial and temporal memory
+protection into their system software and applications and significantly
+improve their security.
+
+==== Added State
 
 The following state is added by {cheri_base_ext_name}:
 
-* Metadata within architectural registers: XLEN-wide <<gprs,general purpose integer registers>> (e.g. `sp`, `a0`) are all extended with another XLEN bits of capability metadata plus a validity bit.
+* Extended <<gprs,general purpose integer registers>>: These XLEN-wide registers (e.g. `sp`, `a0`) are all extended with another XLEN bits of capability metadata plus a validity bit.
 When referring to the extended register, the `x` prefix is replaced with a `c`: i.e. the capability extended version of `x0` becomes `c0`.
 The existing integer register names refer to the address part of the capability.
 For the ABI register names the a `c` prefix is added, i.e. `csp`, `ca0`.
 The zero register is extended with zero metadata and a cleared tag: this is called the <<null-cap>> capability.
-As well as general purpose registers, system registers that store addresses are extended to contain capabilities.
+
+NOTE: The tag of the unprivileged *c* registers must be reset to zero.
+The reset values of the metadata and address fields are UNSPECIFIED for all unprivileged *c* registers except *c0*.
+
+* Extended system registers: system registers that store addresses are extended to contain capabilities.
 In the base {cheri_base_ext_name}, the only such register is the program counter `pc` that is extended to the program counter capability (<<pcc>>). Extending `pc` ensures that the range of branches and jumps for currently executing code can be restricted.
 Additionally, CSRs that hold pointers are extended to capability, but since no CSRs are defined in the RV32I/RV64I base instruction set, the individual chapters that define new CSRs state whether they are extended to CLEN bits.
 
@@ -81,7 +121,7 @@ Additionally, CSRs that hold pointers are extended to capability, but since no C
 The tag is cleared if the memory region is ever written using an operation other than a store of a full capability register.
 Any caches must preserve this abstraction.
 
-=== Added Instructions
+==== Instructions using capability registers
 
 {cheri_base_ext_name} adds new instructions to interact with the extended registers.
 These added instructions can be split into the following categories:
@@ -96,16 +136,12 @@ These instructions give convenient access to allow software to query them.
 * Memory access instructions (e.g. <<LC>>, <<SC>>): capabilities must be read from and written to memory atomically along with their tag.
 Instructions are added to perform these wider accesses, allowing capability flow between the memory and the register file.
 
-// TODO: add the base instructions here
-
-=== Existing Instructions
-
 Existing RISC-V instructions are largely unmodified.
 However, instructions that access memory, as well as branches and jumps are modified to check against the full capability from the address register (e.g. `lw t0, 16(csp)`).
 In some cases, they are also changed to return a full capability value, e.g. <<AUIPC>> will return the full <<pcc>> including the metadata.
 For the full list of instructions that change behavior with {cheri_base_ext_name}, see <<app_cheri_modified_instrs>>.
 
-=== Capability checks
+==== Capability checks
 
 Every memory access performed by a CHERI core must be authorized by a capability.
 The authorizing capability is either named explicitly (the base register of a load/store operation) or implicitly (when executing a branch, <<pcc>> is used for authorization).
